@@ -16,6 +16,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10694: zipfile now ignores garbage at the end of a zipfile.
+
 - Issue #11583: Speed up os.path.isdir on Windows by using GetFileAttributes
   instead of os.stat.
 
